--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-next-experimental": "^5.51.11",
     "daisyui": "^4.12.10",
+    "ethereum-cryptography": "^3.0.0",
     "jotai": "^2.9.1",
     "next": "14.2.5",
     "react": "^18",
